--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
 				style: 'resource/themes/content/default.css',
 				toolbar: 'bold,italic,underline,strike,size,color,removeformat,image,date,time,maximize,source',
 			});
+			
+			// setTimeout(() => {
+			// 	console.log(textarea._rxeditor.val())
+			// }, 1000);
 
 			var themeInput = document.getElementById('theme');
 			themeInput.onchange = function() {
